; ModuleID = '/home/carl/AnghaBench/lede/target/linux/generic/files/drivers/net/phy/extr_rtl8366rb.c_rtl8366rb_mii_write.c'
source_filename = "/home/carl/AnghaBench/lede/target/linux/generic/files/drivers/net/phy/extr_rtl8366rb.c_rtl8366rb_mii_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mii_bus = type { %struct.rtl8366_smi* }
%struct.rtl8366_smi = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mii_bus*, i32, i32, i32)* @rtl8366rb_mii_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rtl8366rb_mii_write(%struct.mii_bus* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.mii_bus*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.rtl8366_smi*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store %struct.mii_bus* %0, %struct.mii_bus** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %12 = load %struct.mii_bus*, %struct.mii_bus** %5, align 8
  %13 = getelementptr inbounds %struct.mii_bus, %struct.mii_bus* %12, i32 0, i32 0
  %14 = load %struct.rtl8366_smi*, %struct.rtl8366_smi** %13, align 8
  store %struct.rtl8366_smi* %14, %struct.rtl8366_smi** %9, align 8
  %15 = load %struct.rtl8366_smi*, %struct.rtl8366_smi** %9, align 8
  %16 = load i32, i32* %6, align 4
  %17 = load i32, i32* %7, align 4
  %18 = load i32, i32* %8, align 4
  %19 = call i32 @rtl8366rb_write_phy_reg(%struct.rtl8366_smi* %15, i32 %16, i32 0, i32 %17, i32 %18)
  store i32 %19, i32* %11, align 4
  %20 = load %struct.rtl8366_smi*, %struct.rtl8366_smi** %9, align 8
  %21 = load i32, i32* %6, align 4
  %22 = load i32, i32* %7, align 4
  %23 = call i32 @rtl8366rb_read_phy_reg(%struct.rtl8366_smi* %20, i32 %21, i32 0, i32 %22, i32* %10)
  %24 = load i32, i32* %11, align 4
  ret i32 %24
}

declare dso_local i32 @rtl8366rb_write_phy_reg(%struct.rtl8366_smi*, i32, i32, i32, i32) #1

declare dso_local i32 @rtl8366rb_read_phy_reg(%struct.rtl8366_smi*, i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
